# calc

./: README.md  calc.cabal  stack.yaml
app/: Main.hs
src/: Eval.hs  Parser.hs  Syntax.hs
